# musicapp

./: .gitignore  CHANGELOG.md  CLAUDE.md  FEATURE_DOCUMENTATION.md  NOTE_20250324.md  README.md  backend-test-setup_20250329_233058.md  dns-setup-guide-net.md  dns-setup-guide.md  dns-setup-required.md  handover-document.md  musicshelf-deployment-summary-net.md  musicshelf-deployment-summary.md  test_frontend_backend_connection.py  インディーズミュージックプラットフォーム_作業報告_2025-03-30.md
docs/: basic_design.md  spec_all.md
indie-music-platform-backend/: .deployment-secrets.txt  .env.example  .env.no-payment  .gitignore  DEBUG_GUIDE.md  Dockerfile  Dockerfile.full-test  Dockerfile.simple  Dockerfile.test  README.md  README_SEED_DATA.md  alembic.ini  api_compatibility_check.py  api_test.py  api_test_results.json  api_troubleshoot.py  check_openapi.py  check_server_readiness.py  create_db.py  create_production_seed.py  create_seed_data.py  debug_imports.py  debug_startup.py  demo_seed_data.py  detailed_server_test.py  detailed_server_test_no_uvicorn.py  dev.db  docker-compose.full-test.yml  docker-compose.test.yml  docker-compose.yml  feature_flags.json  feature_flags.no-payment.json  improved_firebase_init.py  init_database.py  manual_integration_guide.sh  minimal_seed_data.py  minimal_startup.py  minimal_test_server.py  minimal_uvicorn_test.py  modified_startup.py  (+39 more)
indie-music-platform-backend/.github/: PULL_REQUEST_TEMPLATE.md
indie-music-platform-backend/.github/ISSUE_TEMPLATE/: test-issue.md
indie-music-platform-backend/.github/workflows/: ci.yml  release.yml  security-scan.yml  test-coverage.yml
indie-music-platform-backend/alembic/: env.py  script.py.mako
indie-music-platform-backend/alembic/versions/: 20250302_initial_migration.py
indie-music-platform-backend/app/: main.py
indie-music-platform-backend/app/api/: router.py
indie-music-platform-backend/app/api/dependencies/: auth.py
indie-music-platform-backend/app/api/v1/: __init__.py  artists.py  auth.py  features.py  purchases.py  stream.py  tracks.py  users.py
indie-music-platform-backend/app/core/: config.py  feature_flags.py  logging.py  security.py
indie-music-platform-backend/app/db/: session.py
indie-music-platform-backend/app/models/: base.py  play_history.py  purchase.py  track.py  user.py
indie-music-platform-backend/app/schemas/: base.py  purchase.py  stream.py  track.py  user.py
indie-music-platform-backend/app/services/: artist_service.py  auth_service.py  payment.py  purchase_service.py  storage.py  track_service.py  user_service.py
indie-music-platform-backend/app/utils/: storage.py  validators.py
indie-music-platform-backend/deploy/: README.md  azure-deploy.sh  health-check.sh  pre-deployment-checklist.md  troubleshoot.sh
indie-music-platform-backend/docs/: api-specs.md  azure-deployment-guide.md  cicd-implementation-summary.md  comprehensive-testing-final-report.md  comprehensive-testing-plan.md  data-models.md  deployment.md  docker-testing.md  feature-flags-guide.md  services.md  test-implementation-summary.md  testing.md
indie-music-platform-backend/scripts/: azure-setup-automation.js  deployment-preparation-guide.md  run-tests.sh
indie-music-platform-backend/test-results/: .last-run.json
indie-music-platform-backend/tests/: conftest.py  improved_test_auth.py  improved_test_auth_v2.py  modified_test_auth.py  test_minimal.py  test_service_layer.py  test_settings.py
indie-music-platform-backend/tests/api/: test_auth.py  test_purchases.py  test_tracks.py
indie-music-platform-backend/tests/comprehensive/: test_api_comprehensive.py  test_error_cases_extended.py
indie-music-platform-backend/tests/e2e/: api-endpoints.spec.js  api-health.spec.js  performance.spec.js  security-features.spec.js
indie-music-platform-backend/tests/edge_cases/: test_boundary_edge_cases.py
indie-music-platform-backend/tests/integration/: test_full_integration.py
indie-music-platform-backend/tests/mocks/: firebase_credentials.json
indie-music-platform-backend/tests/security/: test_security_vulnerabilities.py
indie-music-platform-backend/tests/services/: test_track_service.py
indie-music-platform-backend/tests/validation/: test_data_validation_comprehensive.py
indie-music-platform-frontend/: .env.production  .env.qa  README.md  package-lock.json  package.json  playwright.config.js  staticwebapp.config.json  vite.config.js
indie-music-platform-frontend/e2e/: comprehensive-user-journeys.spec.js  user-registration.spec.js
indie-music-platform-frontend/src/: App.jsx  (+4 more)
(+48 files in other folders)
