[tool.poetry]
name = "indie-music-platform-backend"
version = "0.1.0"
description = ""
authors = ["musicophilia <hawkymisc@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.95.1"
uvicorn = "0.22.0"
sqlalchemy = "2.0.15"
psycopg2-binary = "2.9.6"
alembic = "1.11.1"
pydantic = "1.10.8"
email-validator = "2.0.0"
python-multipart = "0.0.6"
python-dotenv = "1.0.0"
boto3 = "1.26.151"
firebase-admin = "6.1.0"
stripe = "5.4.0"
python-jose = "3.3.0"
passlib = "1.7.4"
tenacity = "8.2.2"
gunicorn = "20.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
httpx = "0.24.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
